// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item Default 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c0:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item Disabled 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B;
  pointer-events: none;
}

.c0:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item Selected 1`] = `
.c4 {
  padding-left: 8px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #0046FF;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c0:hover {
  background: #F5F5F5;
}

.c2 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

<span
  className="c0 c1"
>
  <span
    className="c2"
  >
    First
  </span>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        size={4}
        viewBox="0 0 24 24"
      >
        <path
          d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList List With Different Arrow Positions 1`] = `
.c5 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c19 {
  padding-left: 8px;
}

.c3 {
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  top: 10px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
}

.c3:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c3:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c23 {
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  top: 10px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
}

.c23:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c23:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c24 {
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  top: 10px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
}

.c24:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c24:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c7 {
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  padding-bottom: 20px;
}

.c9 {
  height: 100%;
  position: relative;
  height: 100%;
}

.c9::after {
  content: '';
  display: block;
  width: 100%;
  height: 32px;
  position: absolute;
  left: 0;
  bottom: 0;
  pointer-events: none;
  background: transparent;
  background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  opacity: 0;
  -webkit-transition: 0.3s opacity ease-out;
  transition: 0.3s opacity ease-out;
  opacity: 1;
}

.c10 {
  max-height: 100%;
  overflow-y: auto;
}

.c11 {
  position: relative;
}

.c22 {
  height: 4px;
  width: 4px;
  position: absolute;
  bottom: 0;
  right: 0;
  pointer-events: none;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
}

.c6 {
  padding-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
}

.c6 .c8 {
  min-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  min-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c14:hover {
  background: #F5F5F5;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #0046FF;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c17:hover {
  background: #F5F5F5;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  color: #282823;
  height: 24px;
  outline: none;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B;
  pointer-events: none;
}

.c21:hover {
  background: #F5F5F5;
}

.c16 {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c25 .c8 {
  min-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Default (right)
    </div>
    <div>
      <div
        className="c3"
      >
        <div
          className="c4 c5"
        >
          <div
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                >
                  <ul
                    className="c12 c13"
                    role="listbox"
                  >
                    <span
                      className="c14 c15"
                    >
                      <span
                        className="c16"
                      >
                        Default?
                      </span>
                    </span>
                    <span
                      className="c17 c15"
                    >
                      <span
                        className="c16"
                      >
                        First
                      </span>
                      <div
                        className="c18"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            aria-hidden="true"
                            className="c20"
                            focusable="false"
                            preserveAspectRatio="xMidYMid meet"
                            role="presentation"
                            size={4}
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                            />
                          </svg>
                        </div>
                      </div>
                    </span>
                    <span
                      className="c14 c15"
                    >
                      <span
                        className="c16"
                      >
                        Second
                      </span>
                    </span>
                    <span
                      className="c21 c15"
                    >
                      <span
                        className="c16"
                      >
                        Disabled
                      </span>
                    </span>
                  </ul>
                  <div
                    className="c22"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Left
    </div>
    <div>
      <div
        className="c23"
      >
        <div
          className="c4 c5"
        >
          <div
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                >
                  <ul
                    className="c12 c13"
                    role="listbox"
                  >
                    <span
                      className="c14 c15"
                    >
                      <span
                        className="c16"
                      >
                        Default?
                      </span>
                    </span>
                    <span
                      className="c17 c15"
                    >
                      <span
                        className="c16"
                      >
                        First
                      </span>
                      <div
                        className="c18"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            aria-hidden="true"
                            className="c20"
                            focusable="false"
                            preserveAspectRatio="xMidYMid meet"
                            role="presentation"
                            size={4}
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                            />
                          </svg>
                        </div>
                      </div>
                    </span>
                    <span
                      className="c14 c15"
                    >
                      <span
                        className="c16"
                      >
                        Second
                      </span>
                    </span>
                    <span
                      className="c21 c15"
                    >
                      <span
                        className="c16"
                      >
                        Disabled
                      </span>
                    </span>
                  </ul>
                  <div
                    className="c22"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Center
    </div>
    <div>
      <div
        className="c24"
      >
        <div
          className="c4 c5"
        >
          <div
            className="c6 c7"
          >
            <div
              className="c8 c9"
            >
              <div
                className="c10"
              >
                <div
                  className="c11"
                >
                  <ul
                    className="c12 c13"
                    role="listbox"
                  >
                    <span
                      className="c14 c15"
                    >
                      <span
                        className="c16"
                      >
                        Default?
                      </span>
                    </span>
                    <span
                      className="c17 c15"
                    >
                      <span
                        className="c16"
                      >
                        First
                      </span>
                      <div
                        className="c18"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            aria-hidden="true"
                            className="c20"
                            focusable="false"
                            preserveAspectRatio="xMidYMid meet"
                            role="presentation"
                            size={4}
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                            />
                          </svg>
                        </div>
                      </div>
                    </span>
                    <span
                      className="c14 c15"
                    >
                      <span
                        className="c16"
                      >
                        Second
                      </span>
                    </span>
                    <span
                      className="c21 c15"
                    >
                      <span
                        className="c16"
                      >
                        Disabled
                      </span>
                    </span>
                  </ul>
                  <div
                    className="c22"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
